--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,3 @@
 confirmed_case_timeseries_csv_filepath=/Users/albert/Developer/COVID-19/COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Confirmed.csv
+death_case_timeseries_csv_filepath=/Users/albert/Developer/COVID-19/COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Deaths.csv
+recovery_case_timeseries_csv_filepath=/Users/albert/Developer/COVID-19/COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Recovered.csv
