enable upload csv to google sheet

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,6 @@
 confirmed_case_timeseries_csv_filepath=/Users/albert/Developer/COVID-19/COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Confirmed.csv
 death_case_timeseries_csv_filepath=/Users/albert/Developer/COVID-19/COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Deaths.csv
 recovery_case_timeseries_csv_filepath=/Users/albert/Developer/COVID-19/COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Recovered.csv
+daily_reports_csv_filepath=/Users/albert/Developer/COVID-19/COVID-19/csse_covid_19_data/csse_covid_19_daily_reports
+daily_reports_filename_pattern=MM-dd-yyyy
+google_spreadsheet_id=1b9B_g-LZXQqeXEa5mx1SE0dt_3RWZn1_MYsQ7zcwrY0
