--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ah.covid19.datacovertor</groupId>
+    <groupId>com.ah.covid19.dataconvertor</groupId>
     <artifactId>COVID-19-DATA-CONVERTOR</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
@@ -53,4 +53,16 @@
             <version>2.11.2</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <configuration>
+                    <mainClass>com.ah.covid19.dataconvertor.App</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
