--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,8 @@
 confirmed_case_timeseries_csv_filepath=/Users/Shared/COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Confirmed.csv
 death_case_timeseries_csv_filepath=/Users/Shared/COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Deaths.csv
 recovery_case_timeseries_csv_filepath=/Users/Shared/COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Recovered.csv
+timeseries_date_format=MM/dd/yyyy
+
 daily_reports_csv_filepath=/Users/Shared/COVID-19/csse_covid_19_data/csse_covid_19_daily_reports
 daily_reports_filename_pattern=MM-dd-yyyy
 google_spreadsheet_id=1b9B_g-LZXQqeXEa5mx1SE0dt_3RWZn1_MYsQ7zcwrY0
